--- a/style/index.css
+++ b/style/index.css
@@ -3,6 +3,11 @@
   background-size: contain;
 }
 
+.jp-KeyCapsSettingsIcon {
+  background-image: url("./img/settings.svg");
+  background-size: contain;
+}
+
 .jp-KeyCaps {
   background-color: var(--jp-layout-color1);
   color: var(--jp-ui-font-color1);
@@ -13,20 +18,50 @@
 }
 
 .jp-KeyCaps-Toolbar {
-  flex: 0;
-  min-height: var(--jp-ui-font-size2);
+  flex-basis: fit-content;
+  flex-shrink: 0;
   background-color: var(--jp-layout-color1);
   z-index: 1;
+  display: flex;
+  padding: var(--jp-keycaps-pad-small);
+}
+
+.jp-KeyCaps-Editor {
+  flex-basis: fit-content;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.jp-KeyCaps-Editor > label {
+  flex-basis: fit-content;
+  display: flex;
+}
+
+.jp-KeyCaps-Editor > label {
+  margin: var(--jp-keycaps-pad-small) var(--jp-keycaps-pad-small) 0 0;
+}
+
+.jp-KeyCaps-Editor > label span {
+  flex: 0.5;
+}
+
+.jp-KeyCaps-Editor > label :not(span) {
+  flex: 1;
+}
+
+.jp-KeyCaps-Toolbar label {
+  flex: 1;
 }
 
 .jp-KeyCaps-Shortcuts {
-  flex: 1;
+  flex-grow: 1;
   overflow-y: auto;
 }
 
 .jp-KeyCaps-Shortcuts {
   margin: 0;
-  padding: 0;
+  padding: var(--jp-ui-font-size0) 0;
 }
 
 .jp-KeyCaps-Shortcuts li {
@@ -52,8 +87,19 @@
 
 .jp-KeyCaps-Shortcuts kbd {
   background-color: var(--jp-layout-color2);
-  border-radius: var(--jp-keycaps-pad-small);
-  margin-left: var(--jp-keycaps-pad-small);
+  border-bottom: solid 2px var(--jp-layout-color3);
+  border-left: dotted 1px var(--jp-layout-color3);
   padding: var(--jp-keycaps-pad-small);
   padding-left: var(--jp-ui-font-size1);
+}
+
+.jp-KeyCaps-Shortcuts kbd:first-child {
+  border-top-left-radius: var(--jp-keycaps-pad-small);
+  border-bottom-left-radius: var(--jp-keycaps-pad-small);
+  border-left: 0;
+}
+
+.jp-KeyCaps-Shortcuts kbd:last-child {
+  border-top-right-radius: var(--jp-keycaps-pad-small);
+  border-bottom-right-radius: var(--jp-keycaps-pad-small);
 }
